[gd_scene load_steps=107 format=3 uid="uid://cdj6vi8f58cl0"]

[ext_resource type="Script" path="res://components/scripts/rufus.gd" id="1_kqagk"]
[ext_resource type="Texture2D" uid="uid://b2uag3j6vt8fm" path="res://components/sprites/rufus/Rufus_base_atk1.png" id="2_qcuyf"]
[ext_resource type="Texture2D" uid="uid://g2nafuf0dsep" path="res://components/sprites/rufus/Rufus_running.png" id="3_460on"]
[ext_resource type="Texture2D" uid="uid://cd5lkvnepjij0" path="res://components/sprites/rufus/Rufus_base_atk2.png" id="4_br4vc"]
[ext_resource type="Texture2D" uid="uid://b7lbtj3r3lhc0" path="res://components/sprites/rufus/Rufus_base_atk3.png" id="5_v1jqm"]
[ext_resource type="Texture2D" uid="uid://c0jj0khgkwyfn" path="res://components/sprites/rufus/Rufus_base_atk4.png" id="6_o4qfo"]
[ext_resource type="Texture2D" uid="uid://trvh7uxpkttv" path="res://components/sprites/rufus/Rufus_base_atk5.png" id="7_7o5ad"]
[ext_resource type="Texture2D" uid="uid://bhvse672dl4nf" path="res://components/sprites/rufus/Rufus_charging_ult.png" id="8_82iym"]
[ext_resource type="Texture2D" uid="uid://2md0jlx2mytg" path="res://components/sprites/rufus/Rufus_damaged.png" id="9_g3sme"]
[ext_resource type="Texture2D" uid="uid://d0sp863w364p2" path="res://components/sprites/rufus/Rufus_idle.png" id="10_fs2iv"]
[ext_resource type="Texture2D" uid="uid://u0s32lgru8y" path="res://components/sprites/rufus/Rufus_skill1.png" id="11_h0yje"]
[ext_resource type="Texture2D" uid="uid://c5ea4veh6frgp" path="res://components/sprites/rufus/Rufus_skill2.png" id="12_ok4m4"]
[ext_resource type="Texture2D" uid="uid://dgcfighya4nmr" path="res://components/sprites/rufus/Rufus_ult.png" id="13_xg5lg"]
[ext_resource type="Texture2D" uid="uid://c5qat6y7dko25" path="res://components/sprites/rufus/Rufus_skill1_eff.png" id="14_5masp"]
[ext_resource type="Texture2D" uid="uid://cd38kiddcqh6c" path="res://components/sprites/rufus/Rufus_skill2_eff.png" id="15_2wlen"]
[ext_resource type="Texture2D" uid="uid://diefu2iuqw5gp" path="res://components/sprites/rufus/Rufus_ult_eff.png" id="16_7rtvo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7mf2f"]
atlas = ExtResource("2_qcuyf")
region = Rect2(0, 0, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjn3u"]
atlas = ExtResource("2_qcuyf")
region = Rect2(0, 800, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_phgao"]
atlas = ExtResource("3_460on")
region = Rect2(0, 0, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qhw2"]
atlas = ExtResource("3_460on")
region = Rect2(0, 800, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ua4g"]
atlas = ExtResource("2_qcuyf")
region = Rect2(0, 0, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_07pnf"]
atlas = ExtResource("2_qcuyf")
region = Rect2(800, 0, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbcig"]
atlas = ExtResource("2_qcuyf")
region = Rect2(0, 800, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6qbr"]
atlas = ExtResource("4_br4vc")
region = Rect2(0, 0, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfv1q"]
atlas = ExtResource("4_br4vc")
region = Rect2(800, 0, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_geblb"]
atlas = ExtResource("4_br4vc")
region = Rect2(0, 800, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_gr5d0"]
atlas = ExtResource("5_v1jqm")
region = Rect2(0, 0, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dxh7"]
atlas = ExtResource("5_v1jqm")
region = Rect2(0, 800, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_shbs8"]
atlas = ExtResource("6_o4qfo")
region = Rect2(0, 0, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ammc"]
atlas = ExtResource("6_o4qfo")
region = Rect2(0, 800, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_xor0e"]
atlas = ExtResource("7_7o5ad")
region = Rect2(0, 0, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqevo"]
atlas = ExtResource("7_7o5ad")
region = Rect2(800, 0, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbaju"]
atlas = ExtResource("7_7o5ad")
region = Rect2(1600, 0, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_74o1y"]
atlas = ExtResource("7_7o5ad")
region = Rect2(0, 800, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_3w3fk"]
atlas = ExtResource("7_7o5ad")
region = Rect2(800, 800, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjyc0"]
atlas = ExtResource("7_7o5ad")
region = Rect2(1600, 800, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3sic"]
atlas = ExtResource("7_7o5ad")
region = Rect2(0, 1600, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_cn7pl"]
atlas = ExtResource("8_82iym")
region = Rect2(0, 0, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_akeok"]
atlas = ExtResource("8_82iym")
region = Rect2(800, 0, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_b37q7"]
atlas = ExtResource("8_82iym")
region = Rect2(1600, 0, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwnp0"]
atlas = ExtResource("8_82iym")
region = Rect2(0, 800, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7t7p"]
atlas = ExtResource("8_82iym")
region = Rect2(800, 800, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_on2jj"]
atlas = ExtResource("8_82iym")
region = Rect2(1600, 800, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0vrl"]
atlas = ExtResource("8_82iym")
region = Rect2(0, 1600, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_canx5"]
atlas = ExtResource("8_82iym")
region = Rect2(800, 1600, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5ies"]
atlas = ExtResource("9_g3sme")
region = Rect2(0, 0, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0gug"]
atlas = ExtResource("9_g3sme")
region = Rect2(800, 0, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxwm5"]
atlas = ExtResource("9_g3sme")
region = Rect2(0, 800, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_8oc16"]
atlas = ExtResource("9_g3sme")
region = Rect2(800, 800, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_okb1v"]
atlas = ExtResource("10_fs2iv")
region = Rect2(0, 0, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_55ag5"]
atlas = ExtResource("10_fs2iv")
region = Rect2(800, 0, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_sy1un"]
atlas = ExtResource("10_fs2iv")
region = Rect2(0, 800, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmo7t"]
atlas = ExtResource("10_fs2iv")
region = Rect2(800, 800, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5vps"]
atlas = ExtResource("11_h0yje")
region = Rect2(0, 0, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_15qug"]
atlas = ExtResource("11_h0yje")
region = Rect2(800, 0, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_sen6t"]
atlas = ExtResource("11_h0yje")
region = Rect2(1600, 0, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_608y6"]
atlas = ExtResource("11_h0yje")
region = Rect2(0, 800, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8o05"]
atlas = ExtResource("11_h0yje")
region = Rect2(800, 800, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngi20"]
atlas = ExtResource("11_h0yje")
region = Rect2(1600, 800, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_52wfl"]
atlas = ExtResource("11_h0yje")
region = Rect2(1600, 0, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_t785x"]
atlas = ExtResource("11_h0yje")
region = Rect2(0, 800, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_asr63"]
atlas = ExtResource("11_h0yje")
region = Rect2(800, 800, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfp28"]
atlas = ExtResource("11_h0yje")
region = Rect2(1600, 800, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gb7n"]
atlas = ExtResource("11_h0yje")
region = Rect2(0, 1600, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_xv2d2"]
atlas = ExtResource("12_ok4m4")
region = Rect2(0, 0, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_qi30u"]
atlas = ExtResource("12_ok4m4")
region = Rect2(800, 0, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_qh4d8"]
atlas = ExtResource("12_ok4m4")
region = Rect2(0, 800, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_0f3ji"]
atlas = ExtResource("12_ok4m4")
region = Rect2(800, 800, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_557b5"]
atlas = ExtResource("12_ok4m4")
region = Rect2(0, 1600, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_yj0t0"]
atlas = ExtResource("13_xg5lg")
region = Rect2(0, 0, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_dl3gn"]
atlas = ExtResource("13_xg5lg")
region = Rect2(800, 0, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qf1p"]
atlas = ExtResource("13_xg5lg")
region = Rect2(1600, 0, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_1glah"]
atlas = ExtResource("13_xg5lg")
region = Rect2(2400, 0, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmkh7"]
atlas = ExtResource("13_xg5lg")
region = Rect2(0, 800, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_gikid"]
atlas = ExtResource("13_xg5lg")
region = Rect2(800, 800, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppe5y"]
atlas = ExtResource("13_xg5lg")
region = Rect2(1600, 800, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgwd2"]
atlas = ExtResource("13_xg5lg")
region = Rect2(2400, 800, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_govw3"]
atlas = ExtResource("13_xg5lg")
region = Rect2(0, 1600, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yov5"]
atlas = ExtResource("13_xg5lg")
region = Rect2(800, 1600, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxaec"]
atlas = ExtResource("13_xg5lg")
region = Rect2(1600, 1600, 800, 800)

[sub_resource type="SpriteFrames" id="SpriteFrames_dte57"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mf2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjn3u")
}],
"loop": false,
"name": &"Eva",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_phgao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qhw2")
}],
"loop": true,
"name": &"Running",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ua4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07pnf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbcig")
}],
"loop": false,
"name": &"base atk1",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6qbr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfv1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_geblb")
}],
"loop": false,
"name": &"base atk2",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gr5d0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dxh7")
}],
"loop": false,
"name": &"base atk3",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_shbs8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ammc")
}],
"loop": false,
"name": &"base atk4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xor0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqevo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbaju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74o1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3w3fk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjyc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3sic")
}],
"loop": false,
"name": &"base atk5",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cn7pl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akeok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b37q7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwnp0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7t7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_on2jj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0vrl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_canx5")
}],
"loop": false,
"name": &"charging_ult",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5ies")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0gug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxwm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8oc16")
}],
"loop": false,
"name": &"damaged",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_okb1v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55ag5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sy1un")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmo7t")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5vps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15qug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sen6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_608y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8o05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngi20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52wfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t785x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asr63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfp28")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gb7n")
}],
"loop": false,
"name": &"skill1",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xv2d2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qi30u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qh4d8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0f3ji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_557b5")
}],
"loop": false,
"name": &"skill2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yj0t0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dl3gn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qf1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1glah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmkh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gikid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppe5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgwd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_govw3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yov5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxaec")
}],
"loop": false,
"name": &"ult_animation",
"speed": 11.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xdive"]
radius = 18.6236
height = 104.718

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lu0mv"]
size = Vector2(39.5, 94)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpam1"]
atlas = ExtResource("14_5masp")
region = Rect2(0, 0, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_443e6"]
atlas = ExtResource("14_5masp")
region = Rect2(800, 0, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_7sjlt"]
atlas = ExtResource("14_5masp")
region = Rect2(1600, 0, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1njx"]
atlas = ExtResource("14_5masp")
region = Rect2(0, 800, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_xw233"]
atlas = ExtResource("14_5masp")
region = Rect2(800, 800, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhjaw"]
atlas = ExtResource("14_5masp")
region = Rect2(1600, 800, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_5g3og"]
atlas = ExtResource("14_5masp")
region = Rect2(1600, 0, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_iogua"]
atlas = ExtResource("14_5masp")
region = Rect2(0, 800, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvs1g"]
atlas = ExtResource("14_5masp")
region = Rect2(800, 800, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1m7f"]
atlas = ExtResource("14_5masp")
region = Rect2(1600, 800, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bppb"]
atlas = ExtResource("14_5masp")
region = Rect2(0, 1600, 800, 800)

[sub_resource type="SpriteFrames" id="SpriteFrames_xt8wu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpam1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_443e6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sjlt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1njx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xw233")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhjaw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5g3og")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iogua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvs1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1m7f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bppb")
}],
"loop": false,
"name": &"effect",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"idle",
"speed": 0.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3sm70"]
radius = 21.0
height = 130.0

[sub_resource type="AtlasTexture" id="AtlasTexture_o6h04"]
atlas = ExtResource("15_2wlen")
region = Rect2(0, 0, 1200, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vafl"]
atlas = ExtResource("15_2wlen")
region = Rect2(1200, 0, 1200, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_npt55"]
atlas = ExtResource("15_2wlen")
region = Rect2(0, 800, 1200, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_om7no"]
atlas = ExtResource("15_2wlen")
region = Rect2(1200, 800, 1200, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2e2g"]
atlas = ExtResource("15_2wlen")
region = Rect2(0, 1600, 1200, 800)

[sub_resource type="SpriteFrames" id="SpriteFrames_6ujbr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6h04")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vafl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_npt55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_om7no")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2e2g")
}],
"loop": false,
"name": &"effect",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"idle",
"speed": 0.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_e35s4"]
radius = 56.0
height = 198.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cdtx2"]
radius = 16.0
height = 114.233

[sub_resource type="SpriteFrames" id="SpriteFrames_ggw6e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_7rtvo")
}],
"loop": false,
"name": &"effect",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"idle",
"speed": 0.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6qh5c"]
radius = 151.0
height = 550.0

[node name="CharacterBody2D" type="CharacterBody2D"]
y_sort_enabled = true
scale = Vector2(0.9, 0.9)
motion_mode = 1
script = ExtResource("1_kqagk")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.156982, 0.156982)
sprite_frames = SubResource("SpriteFrames_dte57")
animation = &"idle"
autoplay = "idle"

[node name="Body_collider" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1.19209e-06, 9.99997)
shape = SubResource("CapsuleShape2D_xdive")
debug_color = Color(1, 1, 0, 0.0666667)

[node name="Basic_atk_Area" type="Area2D" parent="."]
position = Vector2(40, 1)

[node name="Atk_collider" type="CollisionShape2D" parent="Basic_atk_Area"]
visible = false
position = Vector2(4.25, 12)
shape = SubResource("RectangleShape2D_lu0mv")
disabled = true
debug_color = Color(0.666667, 0.458824, 0.611765, 0.419608)

[node name="Skill_1_area" type="Area2D" parent="."]
position = Vector2(0, 2)

[node name="Effect" type="AnimatedSprite2D" parent="Skill_1_area"]
position = Vector2(0, 6.10352e-05)
scale = Vector2(0.285, 0.198826)
sprite_frames = SubResource("SpriteFrames_xt8wu")
animation = &"idle"
autoplay = "idle"

[node name="Skill_collider" type="CollisionShape2D" parent="Skill_1_area"]
visible = false
position = Vector2(36, 2)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_3sm70")
disabled = true
debug_color = Color(0.823529, 0.172549, 0.878431, 0.419608)

[node name="Skill2_area" type="Area2D" parent="."]

[node name="Effect" type="AnimatedSprite2D" parent="Skill2_area"]
position = Vector2(-1, 10)
scale = Vector2(0.1325, 0.1325)
sprite_frames = SubResource("SpriteFrames_6ujbr")
animation = &"idle"
autoplay = "idle"

[node name="Skill_collider" type="CollisionShape2D" parent="Skill2_area"]
visible = false
position = Vector2(-3, 18)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_e35s4")
disabled = true

[node name="Eva_area" type="Area2D" parent="."]

[node name="Eva_collider" type="CollisionShape2D" parent="Eva_area"]
visible = false
position = Vector2(17, 19)
rotation = 0.544543
shape = SubResource("CapsuleShape2D_cdtx2")
disabled = true
debug_color = Color(0.796078, 1, 0.635294, 0.419608)

[node name="Ult_area" type="Area2D" parent="."]
position = Vector2(0, 57)

[node name="Effect" type="AnimatedSprite2D" parent="Ult_area"]
position = Vector2(0, -179.125)
scale = Vector2(0.65, 0.65)
sprite_frames = SubResource("SpriteFrames_ggw6e")
animation = &"idle"
autoplay = "idle"

[node name="Ult_collider" type="CollisionShape2D" parent="Ult_area"]
visible = false
position = Vector2(0, -57)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_6qh5c")
disabled = true
debug_color = Color(0.698039, 0.301961, 0.968627, 0.419608)

[node name="Ult_time" type="Timer" parent="Ult_area"]
wait_time = 1.555
one_shot = true

[node name="Eva_time" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Skill1_cooldown" type="Timer" parent="."]
wait_time = 4.91
one_shot = true

[node name="Skill2_cooldown" type="Timer" parent="."]
wait_time = 6.113
one_shot = true

[node name="Eva_cooldown" type="Timer" parent="."]
wait_time = 3.955
one_shot = true

[node name="Ulti_cooldown" type="Timer" parent="."]
wait_time = 14.727
one_shot = true

[node name="Combo_time" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Stun" type="Timer" parent="."]
one_shot = true

[connection signal="get_healed" from="." to="." method="_on_get_healed"]
[connection signal="set_idle" from="." to="." method="_on_set_idle"]
[connection signal="animation_finished" from="Sprite2D" to="." method="_on_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="Sprite2D" to="." method="_on_sprite_2d_frame_changed"]
[connection signal="body_entered" from="Basic_atk_Area" to="." method="_on_basic_atk_area_body_entered"]
[connection signal="body_exited" from="Basic_atk_Area" to="." method="_on_basic_atk_area_body_exited"]
[connection signal="body_entered" from="Skill_1_area" to="." method="_on_skill_1_area_body_entered"]
[connection signal="body_exited" from="Skill_1_area" to="." method="_on_skill_1_area_body_exited"]
[connection signal="animation_finished" from="Skill_1_area/Effect" to="." method="_on_effect_animation_finished"]
[connection signal="frame_changed" from="Skill_1_area/Effect" to="." method="_on_effect_frame_changed"]
[connection signal="body_entered" from="Skill2_area" to="." method="_on_skill_2_area_body_entered"]
[connection signal="body_exited" from="Skill2_area" to="." method="_on_skill_2_area_body_exited"]
[connection signal="animation_finished" from="Skill2_area/Effect" to="." method="_on_effect_animation_finished"]
[connection signal="frame_changed" from="Skill2_area/Effect" to="." method="_on_effect_frame_changed"]
[connection signal="body_entered" from="Eva_area" to="." method="_on_eva_area_body_entered"]
[connection signal="body_exited" from="Eva_area" to="." method="_on_eva_area_body_exited"]
[connection signal="body_entered" from="Ult_area" to="." method="_on_ult_area_body_entered"]
[connection signal="body_exited" from="Ult_area" to="." method="_on_ult_area_body_exited"]
[connection signal="animation_finished" from="Ult_area/Effect" to="." method="_on_effect_animation_finished"]
[connection signal="timeout" from="Ult_area/Ult_time" to="." method="_on_ult_time_timeout"]
[connection signal="timeout" from="Eva_time" to="." method="_on_eva_time_timeout"]
[connection signal="timeout" from="Skill1_cooldown" to="." method="_on_skill_1_cooldown_timeout"]
[connection signal="timeout" from="Skill2_cooldown" to="." method="_on_skill_2_cooldown_timeout"]
[connection signal="timeout" from="Eva_cooldown" to="." method="_on_eva_cooldown_timeout"]
[connection signal="timeout" from="Ulti_cooldown" to="." method="_on_ult_cooldown_timeout"]
[connection signal="timeout" from="Combo_time" to="." method="_on_comb_time_timeout"]
[connection signal="timeout" from="Stun" to="." method="_on_stun_timeout"]
